# heat_eq_solution

./: .gitignore  main.py  pyproject.toml  user_interaction.py  utils.py
