[tool.poetry]
name = "heat-eq-scheme-1"
version = "0.1.0"
description = ""
authors = ["Artyom Guryanov <bishop81285@gmail.com>"]
readme = "README.md"
packages = [{include = "heat_eq_scheme_1"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
numpy = "^1.25.2"
matplotlib = "^3.7.2"
scipy = "^1.11.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
